--- a/preet2.html
+++ b/preet2.html
@@ -44,7 +44,7 @@
     <div class="container mx-auto px-4">
       <h2 class="text-5xl font-bold text-gold mb-4">Welcome, I'm Preet More</h2>
       <p class="text-gray-400 text-lg mb-8">Crafting elegant digital solutions with purpose and precision.</p>
-      <img src="e37d9dbc-4ea0-4325-a0e2-d1b92148a903.jpg" alt="Profile Photo" class="mx-auto w-44 h-44 rounded-full border-4 border-gold shadow-xl mb-6" />
+      <img src="my-avatar.jpg" alt="Profile Photo" class="mx-auto w-44 h-44 rounded-full border-4 border-gold shadow-xl mb-6" />
       <video controls class="mx-auto w-full max-w-md rounded-lg border-2 border-gold shadow">
         <source src="videos/intro.mp4" type="video/mp4" />
         Your browser does not support the video tag.
